[project]
name = "chat-brancher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.12.1",
    "httpx[http2]>=0.27.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "tortoise-orm>=0.22.2",
]
